feat: Add various missing localization keys and translations

--- a/src/Winhance.WPF/Localization/af.json
+++ b/src/Winhance.WPF/Localization/af.json
@@ -1049,6 +1049,10 @@
   "WIMUtil_Card_SelectOutput_Button": "Kies Ligging",
   "WIMUtil_Card_ConvertImage_Title": "Skakel Beeldformaat Om",
   "WIMUtil_Card_ConvertImage_Button": "Skakel Om",
+  "WIMUtil_Card_BothImages_Title": "Beide WIM en ESD Gevind",
+  "WIMUtil_Card_BothImages_Description": "Beide install.wim en install.esd bestaan. Slegs een moet teenwoordig wees. Vee asseblief een uit om voort te gaan.",
+  "WIMUtil_Button_DeleteWim": "Vee WIM Uit",
+  "WIMUtil_Button_DeleteEsd": "Vee ESD Uit",
   "WIMUtil_Card_GenerateWinhanceXML_Description": "Genereer 'n autounattend.xml lêer gebaseer op jou huidige keuses in Winhance",
   "WIMUtil_Card_DownloadXML_Description": "Kry die nuutste UnattendedWinstall voorafgekonfigureerde autounattend.xml lêer (vereis internet)",
   "WIMUtil_Card_SelectXML_Description": "Voeg 'n autounattend.xml lêer by wat deur jouself of dienste soos Winhance, Schneegans of ander soortgelyke dienste gegenereer is",
@@ -1358,6 +1362,26 @@
   "Progress_Store_DownloadingMainPackage": "Laai {0} hoofpakket af...",
   "Progress_Store_DownloadingDependencies": "Laai {0} vereiste afhanklikheidspakket(te) af...",
   "Progress_Store_InstallingWithDependencies": "Installeer {0} met {1} afhanklikhede...",
+  "Progress_Store_Installing": "Installeer {0}...",
+  "Progress_Store_RequestingInfo": "Versoek pakketinligting vir {0}...",
+  "Progress_Store_DownloadingMain": "Laai {0} hoofpakket af...",
+  "Progress_Store_NonRecoverableError": "Installasie het misluk: {0}",
+  "Progress_WinGet_CheckingUpdates": "Kontroleer vir WinGet-opdaterings...",
+  "Progress_WinGet_CheckingVersion": "Kontroleer WinGet-weergawe...",
+  "Progress_WinGet_UpdateInitiated": "WinGet-opdatering geïnisieer via Store, verifieer voltooiing...",
+  "Progress_WinGet_WaitingForUpdate": "Wag for WinGet-opdatering om te voltooi...",
+  "Progress_WinGet_Reinstalling": "Installeer WinGet weer...",
+  "Progress_WinGet_UpdateSuccess": "WinGet suksesvol opgedateer",
+  "Progress_WinGet_UpdateCompleted": "WinGet-opdatering voltooi",
+  "Progress_WinGet_AlreadyUpToDate": "WinGet is reeds op datum",
+  "Progress_WinGet_InstalledLatest": "WinGet is reeds geïnstalleer by die nuutste weergawe",
+  "Progress_WinGet_Ready": "WinGet is gereed",
+  "Progress_DeletingImageFile": "Vee beeldlêer uit...",
+  "Progress_ImageFileDeleted": "Beeldlêer suksesvol uitgevee",
+  "Progress_ImageFileDeletionFailed": "Kon nie beeldlêer uitvee nie",
+  "Dialog_DeleteImg": "Vee Beeldlêer Uit",
+  "WIMUtil_Msg_DeleteImgConfirm": "Is jy seker jy wil die bestaande beeldlêer uitvee?",
+  "Setting_CrossGroupWarning_Header": "Hierdie instelling beheer ook:",
   "ServiceOption_DisabledRecommended": "Gedeaktiveer (Aanbeveel)",
   "ServiceOption_AutomaticRecommended": "Outomaties (Aanbeveel)",
   "ServiceOption_Disabled": "Gedeaktiveer",
