--- a/src/Winhance.WPF/Localization/el.json
+++ b/src/Winhance.WPF/Localization/el.json
@@ -1049,6 +1049,10 @@
   "WIMUtil_Card_SelectOutput_Button": "Επιλογή Τοποθεσίας",
   "WIMUtil_Card_ConvertImage_Title": "Μετατροπή Μορφής Εικόνας",
   "WIMUtil_Card_ConvertImage_Button": "Μετατροπή",
+  "WIMUtil_Card_BothImages_Title": "Βρέθηκαν και τα δύο WIM και ESD",
+  "WIMUtil_Card_BothImages_Description": "Υπάρχουν και το install.wim και το install.esd. Θα πρέπει να υπάρχει μόνο ένα. Παρακαλώ διαγράψτε ένα για να συνεχίσετε.",
+  "WIMUtil_Button_DeleteWim": "Διαγραφή WIM",
+  "WIMUtil_Button_DeleteEsd": "Διαγραφή ESD",
   "WIMUtil_Card_GenerateWinhanceXML_Description": "Δημιουργήστε ένα αρχείο autounattend.xml βάσει των τρεχουσών επιλογών σας στο Winhance",
   "WIMUtil_Card_DownloadXML_Description": "Λάβετε το πιο πρόσφατο προδιαμορφωμένο αρχείο autounattend.xml του UnattendedWinstall (απαιτεί διαδίκτυο)",
   "WIMUtil_Card_SelectXML_Description": "Προσθέστε ένα αρχείο autounattend.xml που δημιουργήσατε εσείς ή υπηρεσίες όπως Winhance, Schneegans ή άλλες παρόμοιες υπηρεσίες",
@@ -1358,6 +1362,26 @@
   "Progress_Store_DownloadingMainPackage": "Λήψη κύριου πακέτου {0}...",
   "Progress_Store_DownloadingDependencies": "Λήψη {0} απαιτούμενου(ων) πακέτου(ων) εξάρτησης...",
   "Progress_Store_InstallingWithDependencies": "Εγκατάσταση {0} με {1} εξαρτήσεις...",
+  "Progress_Store_Installing": "Εγκατάσταση {0}...",
+  "Progress_Store_RequestingInfo": "Αίτημα πληροφοριών πακέτου για {0}...",
+  "Progress_Store_DownloadingMain": "Λήψη κύριου πακέτου {0}...",
+  "Progress_Store_NonRecoverableError": "Η εγκατάσταση απέτυχε: {0}",
+  "Progress_WinGet_CheckingUpdates": "Έλεγχος για ενημερώσεις WinGet...",
+  "Progress_WinGet_CheckingVersion": "Έλεγχος έκδοσης WinGet...",
+  "Progress_WinGet_UpdateInitiated": "Η ενημέρωση WinGet ξεκίνησε μέσω Store, επαλήθευση ολοκλήρωσης...",
+  "Progress_WinGet_WaitingForUpdate": "Αναμονή για ολοκλήρωση της ενημέρωσης WinGet...",
+  "Progress_WinGet_Reinstalling": "Επανεγκατάσταση WinGet...",
+  "Progress_WinGet_UpdateSuccess": "Το WinGet ενημερώθηκε με επιτυχία",
+  "Progress_WinGet_UpdateCompleted": "Η ενημέρωση WinGet ολοκληρώθηκε",
+  "Progress_WinGet_AlreadyUpToDate": "Το WinGet είναι ήδη ενημερωμένο",
+  "Progress_WinGet_InstalledLatest": "Το WinGet είναι ήδη εγκατεστημένο στην τελευταία έκδοση",
+  "Progress_WinGet_Ready": "Το WinGet είναι έτοιμο",
+  "Progress_DeletingImageFile": "Διαγραφή αρχείου εικόνας...",
+  "Progress_ImageFileDeleted": "Το αρχείο εικόνας διαγράφηκε με επιτυχία",
+  "Progress_ImageFileDeletionFailed": "Η διαγραφή του αρχείου εικόνας απέτυχε",
+  "Dialog_DeleteImg": "Διαγραφή αρχείου εικόνας",
+  "WIMUtil_Msg_DeleteImgConfirm": "Είστε σίγουροι ότι θέλετε να διαγράψετε το υπάρχον αρχείο εικόνας;",
+  "Setting_CrossGroupWarning_Header": "Αυτή η ρύθμιση ελέγχει επίσης:",
   "ServiceOption_DisabledRecommended": "Απενεργοποιημένο (Προτείνεται)",
   "ServiceOption_AutomaticRecommended": "Αυτόματο (Προτείνεται)",
   "ServiceOption_Disabled": "Απενεργοποιημένο",
