--- a/src/Winhance.WPF/Localization/es.json
+++ b/src/Winhance.WPF/Localization/es.json
@@ -1049,6 +1049,10 @@
   "WIMUtil_Card_SelectOutput_Button": "Seleccionar Ubicación",
   "WIMUtil_Card_ConvertImage_Title": "Convertir Formato de Imagen",
   "WIMUtil_Card_ConvertImage_Button": "Convertir",
+  "WIMUtil_Card_BothImages_Title": "Se encontraron ambos WIM y ESD",
+  "WIMUtil_Card_BothImages_Description": "Existen tanto install.wim como install.esd. Solo debe haber uno. Por favor, elimine uno para continuar.",
+  "WIMUtil_Button_DeleteWim": "Eliminar WIM",
+  "WIMUtil_Button_DeleteEsd": "Eliminar ESD",
   "WIMUtil_Card_GenerateWinhanceXML_Description": "Genera un archivo autounattend.xml basado en tus selecciones actuales en Winhance",
   "WIMUtil_Card_DownloadXML_Description": "Obtén el último archivo autounattend.xml preconfigurado de UnattendedWinstall (requiere Internet)",
   "WIMUtil_Card_SelectXML_Description": "Añade un archivo autounattend.xml generado por ti mismo o servicios como Winhance, Schneegans u otros servicios similares",
@@ -1358,6 +1362,26 @@
   "Progress_Store_DownloadingMainPackage": "Descargando paquete principal de {0}...",
   "Progress_Store_DownloadingDependencies": "Descargando paquete(s) de dependencia(s) requerido(s) para {0}...",
   "Progress_Store_InstallingWithDependencies": "Instalando {0} con {1} dependencias...",
+  "Progress_Store_Installing": "Instalando {0}...",
+  "Progress_Store_RequestingInfo": "Solicitando información del paquete para {0}...",
+  "Progress_Store_DownloadingMain": "Descargando paquete principal {0}...",
+  "Progress_Store_NonRecoverableError": "Error de instalación: {0}",
+  "Progress_WinGet_CheckingUpdates": "Buscando actualizaciones de WinGet...",
+  "Progress_WinGet_CheckingVersion": "Comprobando versión de WinGet...",
+  "Progress_WinGet_UpdateInitiated": "Actualización de WinGet iniciada a través de Store, verificando finalización...",
+  "Progress_WinGet_WaitingForUpdate": "Esperando a que se complete la actualización de WinGet...",
+  "Progress_WinGet_Reinstalling": "Reinstalando WinGet...",
+  "Progress_WinGet_UpdateSuccess": "WinGet actualizado correctamente",
+  "Progress_WinGet_UpdateCompleted": "Actualización de WinGet completada",
+  "Progress_WinGet_AlreadyUpToDate": "WinGet ya está actualizado",
+  "Progress_WinGet_InstalledLatest": "WinGet ya está instalado en la última versión",
+  "Progress_WinGet_Ready": "WinGet está listo",
+  "Progress_DeletingImageFile": "Eliminando archivo de imagen...",
+  "Progress_ImageFileDeleted": "Archivo de imagen eliminado correctamente",
+  "Progress_ImageFileDeletionFailed": "Error al eliminar el archivo de imagen",
+  "Dialog_DeleteImg": "Eliminar archivo de imagen",
+  "WIMUtil_Msg_DeleteImgConfirm": "¿Está seguro de que desea eliminar el archivo de imagen existente?",
+  "Setting_CrossGroupWarning_Header": "Esta configuración también controla:",
   "ServiceOption_DisabledRecommended": "Deshabilitado (Recomendado)",
   "ServiceOption_AutomaticRecommended": "Automático (Recomendado)",
   "ServiceOption_Disabled": "Deshabilitado",
