--- a/src/Winhance.WPF/Localization/fr.json
+++ b/src/Winhance.WPF/Localization/fr.json
@@ -1049,6 +1049,10 @@
   "WIMUtil_Card_SelectOutput_Button": "Sélectionner l'emplacement",
   "WIMUtil_Card_ConvertImage_Title": "Convertir le format de l'image",
   "WIMUtil_Card_ConvertImage_Button": "Convertir",
+  "WIMUtil_Card_BothImages_Title": "WIM et ESD trouvés",
+  "WIMUtil_Card_BothImages_Description": "Les fichiers install.wim et install.esd existent tous les deux. Un seul doit être présent. Veuillez en supprimer un pour continuer.",
+  "WIMUtil_Button_DeleteWim": "Supprimer WIM",
+  "WIMUtil_Button_DeleteEsd": "Supprimer ESD",
   "WIMUtil_Card_GenerateWinhanceXML_Description": "Générer un fichier autounattend.xml basé sur vos sélections actuelles dans Winhance",
   "WIMUtil_Card_DownloadXML_Description": "Obtenir le dernier fichier autounattend.xml préconfiguré d'UnattendedWinstall (nécessite une connexion Internet)",
   "WIMUtil_Card_SelectXML_Description": "Ajouter un fichier autounattend.xml généré par vous-même ou des services comme Winhance, Schneegans ou d'autres services similaires",
@@ -1358,6 +1362,26 @@
   "Progress_Store_DownloadingMainPackage": "Téléchargement du paquet principal de {0}...",
   "Progress_Store_DownloadingDependencies": "Téléchargement du ou des paquets de dépendances requis pour {0}...",
   "Progress_Store_InstallingWithDependencies": "Installation de {0} avec {1} dépendances...",
+  "Progress_Store_Installing": "Installation de {0}...",
+  "Progress_Store_RequestingInfo": "Demande d'informations sur le paquet pour {0}...",
+  "Progress_Store_DownloadingMain": "Téléchargement du paquet principal {0}...",
+  "Progress_Store_NonRecoverableError": "L'installation a échoué : {0}",
+  "Progress_WinGet_CheckingUpdates": "Vérification des mises à jour de WinGet...",
+  "Progress_WinGet_CheckingVersion": "Vérification de la version de WinGet...",
+  "Progress_WinGet_UpdateInitiated": "Mise à jour de WinGet initiée via le Store, vérification de la finalisation...",
+  "Progress_WinGet_WaitingForUpdate": "Attente de la fin de la mise à jour de WinGet...",
+  "Progress_WinGet_Reinstalling": "Réinstallation de WinGet...",
+  "Progress_WinGet_UpdateSuccess": "WinGet mis à jour avec succès",
+  "Progress_WinGet_UpdateCompleted": "Mise à jour de WinGet terminée",
+  "Progress_WinGet_AlreadyUpToDate": "WinGet est déjà à jour",
+  "Progress_WinGet_InstalledLatest": "WinGet est déjà installé dans sa dernière version",
+  "Progress_WinGet_Ready": "WinGet est prêt",
+  "Progress_DeletingImageFile": "Suppression du fichier image...",
+  "Progress_ImageFileDeleted": "Fichier image supprimé avec succès",
+  "Progress_ImageFileDeletionFailed": "Échec de la suppression du fichier image",
+  "Dialog_DeleteImg": "Supprimer le fichier image",
+  "WIMUtil_Msg_DeleteImgConfirm": "Êtes-vous sûr de vouloir supprimer le fichier image existant ?",
+  "Setting_CrossGroupWarning_Header": "Ce paramètre contrôle également :",
   "ServiceOption_DisabledRecommended": "Désactivé (recommandé)",
   "ServiceOption_AutomaticRecommended": "Automatique (recommandé)",
   "ServiceOption_Disabled": "Désactivé",
