--- a/src/Winhance.WPF/Localization/it.json
+++ b/src/Winhance.WPF/Localization/it.json
@@ -1049,6 +1049,10 @@
   "WIMUtil_Card_SelectOutput_Button": "Seleziona percorso",
   "WIMUtil_Card_ConvertImage_Title": "Converti formato immagine",
   "WIMUtil_Card_ConvertImage_Button": "Converti",
+  "WIMUtil_Card_BothImages_Title": "Trovati entrambi WIM e ESD",
+  "WIMUtil_Card_BothImages_Description": "Esistono sia install.wim che install.esd. Dovrebbe essercene solo uno. Si prega di eliminarne uno per continuare.",
+  "WIMUtil_Button_DeleteWim": "Elimina WIM",
+  "WIMUtil_Button_DeleteEsd": "Elimina ESD",
   "WIMUtil_Card_GenerateWinhanceXML_Description": "Genera un file autounattend.xml in base alle selezioni correnti in Winhance",
   "WIMUtil_Card_DownloadXML_Description": "Ottieni l'ultimo file autounattend.xml preconfigurato di UnattendedWinstall (richiede Internet)",
   "WIMUtil_Card_SelectXML_Description": "Aggiungi un file autounattend.xml generato da te o da servizi come Winhance, Schneegans o altri servizi simili",
@@ -1358,6 +1362,26 @@
   "Progress_Store_DownloadingMainPackage": "Download del pacchetto principale di {0} in corso...",
   "Progress_Store_DownloadingDependencies": "Download dei pacchetti di dipendenze richiesti per {0} in corso...",
   "Progress_Store_InstallingWithDependencies": "Installazione di {0} con {1} dipendenze in corso...",
+  "Progress_Store_Installing": "Installazione di {0}...",
+  "Progress_Store_RequestingInfo": "Richiesta informazioni pacchetto per {0}...",
+  "Progress_Store_DownloadingMain": "Download del pacchetto principale {0}...",
+  "Progress_Store_NonRecoverableError": "Installazione non riuscita: {0}",
+  "Progress_WinGet_CheckingUpdates": "Controllo aggiornamenti WinGet...",
+  "Progress_WinGet_CheckingVersion": "Controllo versione WinGet...",
+  "Progress_WinGet_UpdateInitiated": "Aggiornamento WinGet avviato tramite Store, verifica completamento...",
+  "Progress_WinGet_WaitingForUpdate": "In attesa del completamento dell'aggiornamento WinGet...",
+  "Progress_WinGet_Reinstalling": "Reinstallazione di WinGet...",
+  "Progress_WinGet_UpdateSuccess": "WinGet aggiornato correttamente",
+  "Progress_WinGet_UpdateCompleted": "Aggiornamento WinGet completato",
+  "Progress_WinGet_AlreadyUpToDate": "WinGet è già aggiornato",
+  "Progress_WinGet_InstalledLatest": "WinGet è già installato all'ultima versione",
+  "Progress_WinGet_Ready": "WinGet è pronto",
+  "Progress_DeletingImageFile": "Eliminazione file immagine...",
+  "Progress_ImageFileDeleted": "File immagine eliminato correttamente",
+  "Progress_ImageFileDeletionFailed": "Eliminazione file immagine non riuscita",
+  "Dialog_DeleteImg": "Elimina file immagine",
+  "WIMUtil_Msg_DeleteImgConfirm": "Sei sicuro di voler eliminare il file immagine esistente?",
+  "Setting_CrossGroupWarning_Header": "Questa impostazione controlla anche:",
   "ServiceOption_DisabledRecommended": "Disabilitato (consigliato)",
   "ServiceOption_AutomaticRecommended": "Automatico (consigliato)",
   "ServiceOption_Disabled": "Disabilitato",
