--- a/src/Winhance.WPF/Localization/ja.json
+++ b/src/Winhance.WPF/Localization/ja.json
@@ -1049,6 +1049,10 @@
   "WIMUtil_Card_SelectOutput_Button": "場所を選択",
   "WIMUtil_Card_ConvertImage_Title": "画像形式を変換",
   "WIMUtil_Card_ConvertImage_Button": "変換",
+  "WIMUtil_Card_BothImages_Title": "WIMとESDの両方が見つかりました",
+  "WIMUtil_Card_BothImages_Description": "install.wimとinstall.esdの両方が存在します。どちらか一方のみが必要です。続行するには、どちらか一方を削除してください。",
+  "WIMUtil_Button_DeleteWim": "WIMを削除",
+  "WIMUtil_Button_DeleteEsd": "ESDを削除",
   "WIMUtil_Card_GenerateWinhanceXML_Description": "Winhanceでの現在の選択に基づいてautounattend.xmlファイルを生成します",
   "WIMUtil_Card_DownloadXML_Description": "最新のUnattendedWinstall事前構成済みautounattend.xmlファイルを取得します（インターネットが必要）",
   "WIMUtil_Card_SelectXML_Description": "自分で生成した、またはWinhance、Schneegansなどのサービスで生成したautounattend.xmlファイルを追加します",
@@ -1358,6 +1362,26 @@
   "Progress_Store_DownloadingMainPackage": "{0}のメインパッケージをダウンロード中...",
   "Progress_Store_DownloadingDependencies": "{0}の必要な依存関係パッケージをダウンロード中...",
   "Progress_Store_InstallingWithDependencies": "{1}個の依存関係とともに{0}をインストール中...",
+  "Progress_Store_Installing": "{0} をインストールしています...",
+  "Progress_Store_RequestingInfo": "{0} のパッケージ情報を要求しています...",
+  "Progress_Store_DownloadingMain": "{0} メインパッケージをダウンロードしています...",
+  "Progress_Store_NonRecoverableError": "インストールに失敗しました: {0}",
+  "Progress_WinGet_CheckingUpdates": "WinGet の更新を確認しています...",
+  "Progress_WinGet_CheckingVersion": "WinGet のバージョンを確認しています...",
+  "Progress_WinGet_UpdateInitiated": "Store 経由で WinGet の更新が開始されました。完了を確認しています...",
+  "Progress_WinGet_WaitingForUpdate": "WinGet の更新が完了するのを待っています...",
+  "Progress_WinGet_Reinstalling": "WinGet を再インストールしています...",
+  "Progress_WinGet_UpdateSuccess": "WinGet が正常に更新されました",
+  "Progress_WinGet_UpdateCompleted": "WinGet の更新が完了しました",
+  "Progress_WinGet_AlreadyUpToDate": "WinGet はすでに最新の状態です",
+  "Progress_WinGet_InstalledLatest": "WinGet はすでに最新バージョンがインストールされています",
+  "Progress_WinGet_Ready": "WinGet の準備ができました",
+  "Progress_DeletingImageFile": "イメージファイルを削除しています...",
+  "Progress_ImageFileDeleted": "イメージファイルが正常に削除されました",
+  "Progress_ImageFileDeletionFailed": "イメージファイルの削除に失敗しました",
+  "Dialog_DeleteImg": "イメージファイルの削除",
+  "WIMUtil_Msg_DeleteImgConfirm": "既存のイメージファイルを削除してもよろしいですか？",
+  "Setting_CrossGroupWarning_Header": "この設定は以下も制御します:",
   "ServiceOption_DisabledRecommended": "無効（推奨）",
   "ServiceOption_AutomaticRecommended": "自動（推奨）",
   "ServiceOption_Disabled": "無効",
