--- a/src/Winhance.WPF/Localization/lt.json
+++ b/src/Winhance.WPF/Localization/lt.json
@@ -1049,6 +1049,10 @@
   "WIMUtil_Card_SelectOutput_Button": "Pasirinkti vietą",
   "WIMUtil_Card_ConvertImage_Title": "Konvertuoti vaizdo formatą",
   "WIMUtil_Card_ConvertImage_Button": "Konvertuoti",
+  "WIMUtil_Card_BothImages_Title": "Rasti abu WIM ir ESD",
+  "WIMUtil_Card_BothImages_Description": "Egzistuoja tiek install.wim, tiek install.esd. Turi būti tik vienas. Norėdami tęsti, ištrinkite vieną.",
+  "WIMUtil_Button_DeleteWim": "Ištrinti WIM",
+  "WIMUtil_Button_DeleteEsd": "Ištrinti ESD",
   "WIMUtil_Card_GenerateWinhanceXML_Description": "Generuoti autounattend.xml failą pagal jūsų dabartinius pasirinkimus Winhance",
   "WIMUtil_Card_DownloadXML_Description": "Gauti naujausią UnattendedWinstall iš anksto sukonfigūruotą autounattend.xml failą (reikalingas internetas)",
   "WIMUtil_Card_SelectXML_Description": "Pridėti autounattend.xml failą, sugeneruotą jūsų pačių ar paslaugų, tokių kaip Winhance, Schneegans ar kitų panašių paslaugų",
@@ -1358,6 +1362,26 @@
   "Progress_Store_DownloadingMainPackage": "Atsisiunčiamas pagrindinis paketas {0}...",
   "Progress_Store_DownloadingDependencies": "Atsisiunčiami {0} reikalingi priklausomybės paketai...",
   "Progress_Store_InstallingWithDependencies": "Diegiama {0} su {1} priklausomybėmis...",
+  "Progress_Store_Installing": "Įdiegiama {0}...",
+  "Progress_Store_RequestingInfo": "Užklausiama paketo informacija apie {0}...",
+  "Progress_Store_DownloadingMain": "Atsisiunčiamas pagrindinis paketas {0}...",
+  "Progress_Store_NonRecoverableError": "Įdiegti nepavyko: {0}",
+  "Progress_WinGet_CheckingUpdates": "Tikrinami „WinGet“ atnaujinimai...",
+  "Progress_WinGet_CheckingVersion": "Tikrinama „WinGet“ versija...",
+  "Progress_WinGet_UpdateInitiated": "„WinGet“ atnaujinimas pradėtas per „Store“, tikrinamas užbaigimas...",
+  "Progress_WinGet_WaitingForUpdate": "Laukiama, kol bus baigtas „WinGet“ atnaujinimas...",
+  "Progress_WinGet_Reinstalling": "Iš naujo įdiegiamas „WinGet“...",
+  "Progress_WinGet_UpdateSuccess": "„WinGet“ sėkmingai atnaujintas",
+  "Progress_WinGet_UpdateCompleted": "„WinGet“ atnaujinimas baigtas",
+  "Progress_WinGet_AlreadyUpToDate": "„WinGet“ jau yra naujausios versijos",
+  "Progress_WinGet_InstalledLatest": "„WinGet“ jau įdiegtas su naujausia versija",
+  "Progress_WinGet_Ready": "„WinGet“ paruoštas",
+  "Progress_DeletingImageFile": "Trinamas atvaizdo failas...",
+  "Progress_ImageFileDeleted": "Atvaizdo failas sėkmingai ištrintas",
+  "Progress_ImageFileDeletionFailed": "Nepavyko ištrinti atvaizdo failo",
+  "Dialog_DeleteImg": "Ištrinti atvaizdo failą",
+  "WIMUtil_Msg_DeleteImgConfirm": "Ar tikrai norite ištrinti esamą atvaizdo failą?",
+  "Setting_CrossGroupWarning_Header": "Šis nustatymas taip pat valdo:",
   "ServiceOption_DisabledRecommended": "Išjungta (rekomenduojama)",
   "ServiceOption_AutomaticRecommended": "Automatinis (rekomenduojama)",
   "ServiceOption_Disabled": "Išjungta",
