--- a/src/Winhance.WPF/Localization/nl-BE.json
+++ b/src/Winhance.WPF/Localization/nl-BE.json
@@ -1049,6 +1049,10 @@
   "WIMUtil_Card_SelectOutput_Button": "Selecteer Locatie",
   "WIMUtil_Card_ConvertImage_Title": "Beeldformaat Converteren",
   "WIMUtil_Card_ConvertImage_Button": "Converteren",
+  "WIMUtil_Card_BothImages_Title": "Zowel WIM als ESD gevonden",
+  "WIMUtil_Card_BothImages_Description": "Zowel install.wim als install.esd bestaan. Er mag er maar één aanwezig zijn. Verwijder er één om door te gaan.",
+  "WIMUtil_Button_DeleteWim": "Verwijder WIM",
+  "WIMUtil_Button_DeleteEsd": "Verwijder ESD",
   "WIMUtil_Card_GenerateWinhanceXML_Description": "Genereer een autounattend.xml bestand gebaseerd op uw huidige selecties in Winhance",
   "WIMUtil_Card_DownloadXML_Description": "Haal het nieuwste UnattendedWinstall voorgeconfigureerde autounattend.xml bestand op (internet vereist)",
   "WIMUtil_Card_SelectXML_Description": "Voeg een autounattend.xml bestand toe dat door uzelf of diensten zoals Winhance, Schneegans of andere vergelijkbare diensten is gegenereerd",
@@ -1358,6 +1362,26 @@
   "Progress_Store_DownloadingMainPackage": "{0} hoofdpakket downloaden...",
   "Progress_Store_DownloadingDependencies": "{0} vereiste afhankelijkheidspakket(ten) downloaden...",
   "Progress_Store_InstallingWithDependencies": "{0} installeren met {1} afhankelijkheden...",
+  "Progress_Store_Installing": "{0} installeren...",
+  "Progress_Store_RequestingInfo": "Pakketgegevens voor {0} opvragen...",
+  "Progress_Store_DownloadingMain": "{0} hoofpakket downloaden...",
+  "Progress_Store_NonRecoverableError": "Installatie mislukt: {0}",
+  "Progress_WinGet_CheckingUpdates": "Controleren op WinGet-updates...",
+  "Progress_WinGet_CheckingVersion": "WinGet-versie controleren...",
+  "Progress_WinGet_UpdateInitiated": "WinGet-update gestart via Store, voltooiing verifiëren...",
+  "Progress_WinGet_WaitingForUpdate": "Wachten tot de WinGet-update is voltooid...",
+  "Progress_WinGet_Reinstalling": "WinGet opnieuw installeren...",
+  "Progress_WinGet_UpdateSuccess": "WinGet succesvol bijgewerkt",
+  "Progress_WinGet_UpdateCompleted": "WinGet-update voltooid",
+  "Progress_WinGet_AlreadyUpToDate": "WinGet is al up-to-date",
+  "Progress_WinGet_InstalledLatest": "WinGet is al geïnstalleerd in de nieuwste versie",
+  "Progress_WinGet_Ready": "WinGet is klaar",
+  "Progress_DeletingImageFile": "Bestand van de afbeelding verwijderen...",
+  "Progress_ImageFileDeleted": "Beeldbestand succesvol verwijderd",
+  "Progress_ImageFileDeletionFailed": "Verwijderen van beeldbestand mislukt",
+  "Dialog_DeleteImg": "Beeldbestand verwijderen",
+  "WIMUtil_Msg_DeleteImgConfirm": "Weet u zeker dat u het bestaande beeldbestand wilt verwijderen?",
+  "Setting_CrossGroupWarning_Header": "Deze instelling regelt ook:",
   "ServiceOption_DisabledRecommended": "Uitgeschakeld (Aanbevolen)",
   "ServiceOption_AutomaticRecommended": "Automatisch (Aanbevolen)",
   "ServiceOption_Disabled": "Uitgeschakeld",
