--- a/src/Winhance.WPF/Localization/pl.json
+++ b/src/Winhance.WPF/Localization/pl.json
@@ -1049,6 +1049,10 @@
   "WIMUtil_Card_SelectOutput_Button": "Wybierz lokalizację",
   "WIMUtil_Card_ConvertImage_Title": "Konwertuj format obrazu",
   "WIMUtil_Card_ConvertImage_Button": "Konwertuj",
+  "WIMUtil_Card_BothImages_Title": "Znaleziono zarówno WIM, jak i ESD",
+  "WIMUtil_Card_BothImages_Description": "Istnieją pliki install.wim i install.esd. Powinien być obecny tylko jeden. Usuń jeden, aby kontynuować.",
+  "WIMUtil_Button_DeleteWim": "Usuń WIM",
+  "WIMUtil_Button_DeleteEsd": "Usuń ESD",
   "WIMUtil_Card_GenerateWinhanceXML_Description": "Wygeneruj plik autounattend.xml na podstawie bieżących wyborów w Winhance",
   "WIMUtil_Card_DownloadXML_Description": "Pobierz najnowszy wstępnie skonfigurowany plik autounattend.xml z UnattendedWinstall (wymaga internetu)",
   "WIMUtil_Card_SelectXML_Description": "Dodaj plik autounattend.xml wygenerowany samodzielnie lub za pomocą usług takich jak Winhance, Schneegans lub innych podobnych usług",
@@ -1358,6 +1362,26 @@
   "Progress_Store_DownloadingMainPackage": "Pobieranie głównego pakietu {0}...",
   "Progress_Store_DownloadingDependencies": "Pobieranie {0} wymaganego pakietu(ów) zależności...",
   "Progress_Store_InstallingWithDependencies": "Instalowanie {0} z {1} zależnościami...",
+  "Progress_Store_Installing": "Instalowanie {0}...",
+  "Progress_Store_RequestingInfo": "Pobieranie informacji o pakiecie dla {0}...",
+  "Progress_Store_DownloadingMain": "Pobieranie głównego pakietu {0}...",
+  "Progress_Store_NonRecoverableError": "Instalacja nie powiodła się: {0}",
+  "Progress_WinGet_CheckingUpdates": "Sprawdzanie aktualizacji WinGet...",
+  "Progress_WinGet_CheckingVersion": "Sprawdzanie wersji WinGet...",
+  "Progress_WinGet_UpdateInitiated": "Aktualizacja WinGet zainicjowana przez Store, weryfikacja ukończenia...",
+  "Progress_WinGet_WaitingForUpdate": "Oczekiwanie na zakończenie aktualizacji WinGet...",
+  "Progress_WinGet_Reinstalling": "Ponowne instalowanie WinGet...",
+  "Progress_WinGet_UpdateSuccess": "WinGet został pomyślnie zaktualizowany",
+  "Progress_WinGet_UpdateCompleted": "Aktualizacja WinGet zakończona",
+  "Progress_WinGet_AlreadyUpToDate": "WinGet jest już aktualny",
+  "Progress_WinGet_InstalledLatest": "WinGet jest już zainstalowany w najnowszej wersji",
+  "Progress_WinGet_Ready": "WinGet jest gotowy",
+  "Progress_DeletingImageFile": "Usuwanie pliku obrazu...",
+  "Progress_ImageFileDeleted": "Plik obrazu został pomyślnie usunięty",
+  "Progress_ImageFileDeletionFailed": "Nie udało się usunąć pliku obrazu",
+  "Dialog_DeleteImg": "Usuń plik obrazu",
+  "WIMUtil_Msg_DeleteImgConfirm": "Czy na pewno chcesz usunąć istniejący plik obrazu?",
+  "Setting_CrossGroupWarning_Header": "To ustawienie steruje również:",
   "ServiceOption_DisabledRecommended": "Wyłączone (zalecane)",
   "ServiceOption_AutomaticRecommended": "Automatyczne (zalecane)",
   "ServiceOption_Disabled": "Wyłączone",
