--- a/src/Winhance.WPF/Localization/pt-BR.json
+++ b/src/Winhance.WPF/Localization/pt-BR.json
@@ -874,6 +874,7 @@
   "SettingGroup_AMDPowerSlider": "Controle Deslizante de Energia AMD",
   "SettingGroup_ATIPowerPlay": "ATI PowerPlay",
   "SettingGroup_SwitchableGraphics": "Gráficos Comutáveis",
+  "SettingGroup_StartMenu": "Menu Iniciar",
   "Setting_power-plan-selection_Name": "Plano de Energia",
   "Setting_power-display-timeout_Name": "Desligar a tela",
   "Setting_power-display-timeout_Description": "Especifica o período de inatividade antes que o Windows desligue a tela",
@@ -1048,6 +1049,10 @@
   "WIMUtil_Card_SelectOutput_Button": "Selecionar Local",
   "WIMUtil_Card_ConvertImage_Title": "Converter Formato de Imagem",
   "WIMUtil_Card_ConvertImage_Button": "Converter",
+  "WIMUtil_Card_BothImages_Title": "WIM e ESD Encontrados",
+  "WIMUtil_Card_BothImages_Description": "Ambos install.wim e install.esd existem. Apenas um deve estar presente. Por favor, exclua um para continuar.",
+  "WIMUtil_Button_DeleteWim": "Excluir WIM",
+  "WIMUtil_Button_DeleteEsd": "Excluir ESD",
   "WIMUtil_Card_GenerateWinhanceXML_Description": "Gerar um arquivo autounattend.xml com base em suas seleções atuais no Winhance",
   "WIMUtil_Card_DownloadXML_Description": "Obtenha o arquivo autounattend.xml pré-configurado mais recente do UnattendedWinstall (requer internet)",
   "WIMUtil_Card_SelectXML_Description": "Adicione um arquivo autounattend.xml gerado por você ou por serviços como Winhance, Schneegans ou outros serviços similares",
@@ -1357,6 +1362,26 @@
   "Progress_Store_DownloadingMainPackage": "Baixando o pacote principal de {0}...",
   "Progress_Store_DownloadingDependencies": "Baixando {0} pacote(s) de dependência necessário(s)...",
   "Progress_Store_InstallingWithDependencies": "Instalando {0} com {1} dependências...",
+  "Progress_Store_Installing": "Instalando {0}...",
+  "Progress_Store_RequestingInfo": "Solicitando informações do pacote para {0}...",
+  "Progress_Store_DownloadingMain": "Baixando pacote principal {0}...",
+  "Progress_Store_NonRecoverableError": "Falha na instalação: {0}",
+  "Progress_WinGet_CheckingUpdates": "Verificando atualizações do WinGet...",
+  "Progress_WinGet_CheckingVersion": "Verificando versão do WinGet...",
+  "Progress_WinGet_UpdateInitiated": "Atualização do WinGet iniciada via Store, verificando conclusão...",
+  "Progress_WinGet_WaitingForUpdate": "Aguardando a conclusão da atualização do WinGet...",
+  "Progress_WinGet_Reinstalling": "Reinstalando o WinGet...",
+  "Progress_WinGet_UpdateSuccess": "WinGet atualizado com sucesso",
+  "Progress_WinGet_UpdateCompleted": "Atualização do WinGet concluída",
+  "Progress_WinGet_AlreadyUpToDate": "WinGet já está atualizado",
+  "Progress_WinGet_InstalledLatest": "WinGet já está instalado na versão mais recente",
+  "Progress_WinGet_Ready": "WinGet está pronto",
+  "Progress_DeletingImageFile": "Excluindo arquivo de imagem...",
+  "Progress_ImageFileDeleted": "Arquivo de imagem excluído com sucesso",
+  "Progress_ImageFileDeletionFailed": "Falha ao excluir arquivo de imagem",
+  "Dialog_DeleteImg": "Excluir Arquivo de Imagem",
+  "WIMUtil_Msg_DeleteImgConfirm": "Tem certeza de que deseja excluir o arquivo de imagem existente?",
+  "Setting_CrossGroupWarning_Header": "Esta configuração também controla:",
   "ServiceOption_DisabledRecommended": "Desativado (Recomendado)",
   "ServiceOption_AutomaticRecommended": "Automático (Recomendado)",
   "ServiceOption_Disabled": "Desativado",
