--- a/src/Winhance.WPF/Localization/ru.json
+++ b/src/Winhance.WPF/Localization/ru.json
@@ -874,6 +874,7 @@
   "SettingGroup_AMDPowerSlider": "Ползунок питания AMD",
   "SettingGroup_ATIPowerPlay": "ATI PowerPlay",
   "SettingGroup_SwitchableGraphics": "Переключаемая графика",
+  "SettingGroup_StartMenu": "Меню Пуск",
   "Setting_power-plan-selection_Name": "План электропитания",
   "Setting_power-display-timeout_Name": "Отключить дисплей",
   "Setting_power-display-timeout_Description": "Указывает период бездействия, по истечении которого Windows отключает дисплей",
@@ -1048,6 +1049,10 @@
   "WIMUtil_Card_SelectOutput_Button": "Выбрать место",
   "WIMUtil_Card_ConvertImage_Title": "Преобразовать формат изображения",
   "WIMUtil_Card_ConvertImage_Button": "Преобразовать",
+  "WIMUtil_Card_BothImages_Title": "Найдены WIM и ESD",
+  "WIMUtil_Card_BothImages_Description": "Существуют оба файла install.wim и install.esd. Должен присутствовать только один. Пожалуйста, удалите один, чтобы продолжить.",
+  "WIMUtil_Button_DeleteWim": "Удалить WIM",
+  "WIMUtil_Button_DeleteEsd": "Удалить ESD",
   "WIMUtil_Card_GenerateWinhanceXML_Description": "Создать файл autounattend.xml на основе ваших текущих выборов в Winhance",
   "WIMUtil_Card_DownloadXML_Description": "Получить последний предварительно настроенный файл autounattend.xml от UnattendedWinstall (требуется интернет)",
   "WIMUtil_Card_SelectXML_Description": "Добавить файл autounattend.xml, созданный вами или сервисами, такими как Winhance, Schneegans или другими подобными сервисами",
@@ -1357,6 +1362,26 @@
   "Progress_Store_DownloadingMainPackage": "Загрузка основного пакета {0}...",
   "Progress_Store_DownloadingDependencies": "Загрузка {0} необходимых зависимых пакетов...",
   "Progress_Store_InstallingWithDependencies": "Установка {0} с {1} зависимостями...",
+  "Progress_Store_Installing": "Установка {0}...",
+  "Progress_Store_RequestingInfo": "Запрос информации о пакете {0}...",
+  "Progress_Store_DownloadingMain": "Загрузка основного пакета {0}...",
+  "Progress_Store_NonRecoverableError": "Ошибка установки: {0}",
+  "Progress_WinGet_CheckingUpdates": "Проверка обновлений WinGet...",
+  "Progress_WinGet_CheckingVersion": "Проверка версии WinGet...",
+  "Progress_WinGet_UpdateInitiated": "Обновление WinGet инициировано через Store, проверка завершения...",
+  "Progress_WinGet_WaitingForUpdate": "Ожидание завершения обновления WinGet...",
+  "Progress_WinGet_Reinstalling": "Переустановка WinGet...",
+  "Progress_WinGet_UpdateSuccess": "WinGet успешно обновлен",
+  "Progress_WinGet_UpdateCompleted": "Обновление WinGet завершено",
+  "Progress_WinGet_AlreadyUpToDate": "WinGet уже обновлен",
+  "Progress_WinGet_InstalledLatest": "WinGet уже установлен последней версии",
+  "Progress_WinGet_Ready": "WinGet готов",
+  "Progress_DeletingImageFile": "Удаление файла образа...",
+  "Progress_ImageFileDeleted": "Файл образа успешно удален",
+  "Progress_ImageFileDeletionFailed": "Не удалось удалить файл образа",
+  "Dialog_DeleteImg": "Удалить файл образа",
+  "WIMUtil_Msg_DeleteImgConfirm": "Вы уверены, что хотите удалить существующий файл образа?",
+  "Setting_CrossGroupWarning_Header": "Этот параметр также управляет:",
   "ServiceOption_DisabledRecommended": "Отключено (рекомендуется)",
   "ServiceOption_AutomaticRecommended": "Автоматически (рекомендуется)",
   "ServiceOption_Disabled": "Отключено",
