--- a/src/Winhance.WPF/Localization/zh-Hans.json
+++ b/src/Winhance.WPF/Localization/zh-Hans.json
@@ -1049,6 +1049,10 @@
   "WIMUtil_Card_SelectOutput_Button": "选择位置",
   "WIMUtil_Card_ConvertImage_Title": "转换图像格式",
   "WIMUtil_Card_ConvertImage_Button": "转换",
+  "WIMUtil_Card_BothImages_Title": "同时发现 WIM 和 ESD",
+  "WIMUtil_Card_BothImages_Description": "install.wim 和 install.esd 都存在。只能保留一个。请删除一个以继续。",
+  "WIMUtil_Button_DeleteWim": "删除 WIM",
+  "WIMUtil_Button_DeleteEsd": "删除 ESD",
   "WIMUtil_Card_GenerateWinhanceXML_Description": "根据您当前在 Winhance 中的选择生成一个 autounattend.xml 文件",
   "WIMUtil_Card_DownloadXML_Description": "获取最新的 UnattendedWinstall 预配置 autounattend.xml 文件（需要互联网）",
   "WIMUtil_Card_SelectXML_Description": "添加由您自己或 Winhance、Schneegans 或其他类似服务生成的 autounattend.xml 文件",
@@ -1358,6 +1362,26 @@
   "Progress_Store_DownloadingMainPackage": "正在下载 {0} 主软件包...",
   "Progress_Store_DownloadingDependencies": "正在下载 {0} 所需的依赖软件包...",
   "Progress_Store_InstallingWithDependencies": "正在安装 {0} 以及 {1} 个依赖项...",
+  "Progress_Store_Installing": "正在安装 {0}...",
+  "Progress_Store_RequestingInfo": "正在请求 {0} 的包信息...",
+  "Progress_Store_DownloadingMain": "正在下载 {0} 主包...",
+  "Progress_Store_NonRecoverableError": "安装失败: {0}",
+  "Progress_WinGet_CheckingUpdates": "正在检查 WinGet 更新...",
+  "Progress_WinGet_CheckingVersion": "正在检查 WinGet 版本...",
+  "Progress_WinGet_UpdateInitiated": "已通过 Store 启动 WinGet 更新，正在验证完成情况...",
+  "Progress_WinGet_WaitingForUpdate": "正在等待 WinGet 更新完成...",
+  "Progress_WinGet_Reinstalling": "正在重新安装 WinGet...",
+  "Progress_WinGet_UpdateSuccess": "WinGet 更新成功",
+  "Progress_WinGet_UpdateCompleted": "WinGet 更新已完成",
+  "Progress_WinGet_AlreadyUpToDate": "WinGet 已是最新版本",
+  "Progress_WinGet_InstalledLatest": "WinGet 已安装最新版本",
+  "Progress_WinGet_Ready": "WinGet 已就绪",
+  "Progress_DeletingImageFile": "正在删除映像文件...",
+  "Progress_ImageFileDeleted": "映像文件删除成功",
+  "Progress_ImageFileDeletionFailed": "删除映像文件失败",
+  "Dialog_DeleteImg": "删除映像文件",
+  "WIMUtil_Msg_DeleteImgConfirm": "确定要删除现有的映像文件吗？",
+  "Setting_CrossGroupWarning_Header": "此设置还控制：",
   "ServiceOption_DisabledRecommended": "禁用（推荐）",
   "ServiceOption_AutomaticRecommended": "自动（推荐）",
   "ServiceOption_Disabled": "禁用",
