--- a/src/Winhance.WPF/Localization/zh-Hant.json
+++ b/src/Winhance.WPF/Localization/zh-Hant.json
@@ -1049,6 +1049,10 @@
   "WIMUtil_Card_SelectOutput_Button": "選擇位置",
   "WIMUtil_Card_ConvertImage_Title": "轉換映像檔格式",
   "WIMUtil_Card_ConvertImage_Button": "轉換",
+  "WIMUtil_Card_BothImages_Title": "同時發現 WIM 和 ESD",
+  "WIMUtil_Card_BothImages_Description": "install.wim 和 install.esd 都存在。只能保留一個。請刪除一個以繼續。",
+  "WIMUtil_Button_DeleteWim": "刪除 WIM",
+  "WIMUtil_Button_DeleteEsd": "刪除 ESD",
   "WIMUtil_Card_GenerateWinhanceXML_Description": "根據您在 Winhance 中目前的選擇，產生 autounattend.xml 檔案",
   "WIMUtil_Card_DownloadXML_Description": "取得最新預先設定好的 UnattendedWinstall autounattend.xml 檔案 (需要網際網路)",
   "WIMUtil_Card_SelectXML_Description": "加入由您自己或 Winhance、Schneegans 等服務所產生的 autounattend.xml 檔案",
@@ -1358,6 +1362,26 @@
   "Progress_Store_DownloadingMainPackage": "正在下載 {0} 主要套件...",
   "Progress_Store_DownloadingDependencies": "正在下載 {0} 必要的相依性套件...",
   "Progress_Store_InstallingWithDependencies": "正在安裝 {0} 與 {1} 個相依性元件...",
+  "Progress_Store_Installing": "正在安裝 {0}...",
+  "Progress_Store_RequestingInfo": "正在請求 {0} 的套件資訊...",
+  "Progress_Store_DownloadingMain": "正在下載 {0} 主套件...",
+  "Progress_Store_NonRecoverableError": "安裝失敗: {0}",
+  "Progress_WinGet_CheckingUpdates": "正在檢查 WinGet 更新...",
+  "Progress_WinGet_CheckingVersion": "正在檢查 WinGet 版本...",
+  "Progress_WinGet_UpdateInitiated": "已透過 Store 啟動 WinGet 更新，正在驗證完成情況...",
+  "Progress_WinGet_WaitingForUpdate": "正在等待 WinGet 更新完成...",
+  "Progress_WinGet_Reinstalling": "正在重新安裝 WinGet...",
+  "Progress_WinGet_UpdateSuccess": "WinGet 更新成功",
+  "Progress_WinGet_UpdateCompleted": "WinGet 更新已完成",
+  "Progress_WinGet_AlreadyUpToDate": "WinGet 已是最新版本",
+  "Progress_WinGet_InstalledLatest": "WinGet 已安裝最新版本",
+  "Progress_WinGet_Ready": "WinGet 已就緒",
+  "Progress_DeletingImageFile": "正在刪除映像檔案...",
+  "Progress_ImageFileDeleted": "映像檔案刪除成功",
+  "Progress_ImageFileDeletionFailed": "刪除映像檔案失敗",
+  "Dialog_DeleteImg": "刪除映像檔案",
+  "WIMUtil_Msg_DeleteImgConfirm": "確定要刪除現有的映像檔案嗎？",
+  "Setting_CrossGroupWarning_Header": "此設定還控制：",
   "ServiceOption_DisabledRecommended": "已停用 (推薦)",
   "ServiceOption_AutomaticRecommended": "自動 (推薦)",
   "ServiceOption_Disabled": "已停用",
