--- a/src/Winhance.WPF/Localization/hi.json
+++ b/src/Winhance.WPF/Localization/hi.json
@@ -874,6 +874,7 @@
   "SettingGroup_AMDPowerSlider": "AMD पावर स्लाइडर",
   "SettingGroup_ATIPowerPlay": "ATI पावरप्ले",
   "SettingGroup_SwitchableGraphics": "स्विचेबल ग्राफिक्स",
+  "SettingGroup_StartMenu": "स्टार्ट मेनू",
   "Setting_power-plan-selection_Name": "पावर प्लान",
   "Setting_power-display-timeout_Name": "डिस्प्ले बंद करें",
   "Setting_power-display-timeout_Description": "निष्क्रियता की अवधि निर्दिष्ट करता है जिसके बाद विंडोज डिस्प्ले को बंद कर देता है",
@@ -1048,6 +1049,10 @@
   "WIMUtil_Card_SelectOutput_Button": "स्थान चुनें",
   "WIMUtil_Card_ConvertImage_Title": "छवि प्रारूप बदलें",
   "WIMUtil_Card_ConvertImage_Button": "बदलें",
+  "WIMUtil_Card_BothImages_Title": "WIM और ESD दोनों मिले",
+  "WIMUtil_Card_BothImages_Description": "install.wim और install.esd दोनों मौजूद हैं। केवल एक ही होना चाहिए। कृपया जारी रखने के लिए एक को हटा दें।",
+  "WIMUtil_Button_DeleteWim": "WIM हटाएं",
+  "WIMUtil_Button_DeleteEsd": "ESD हटाएं",
   "WIMUtil_Card_GenerateWinhanceXML_Description": "विनहान्स में आपके वर्तमान चयनों के आधार पर एक autounattend.xml फ़ाइल उत्पन्न करें",
   "WIMUtil_Card_DownloadXML_Description": "नवीनतम अनअटेंडेडविंस्टॉल पूर्व-कॉन्फ़िगर autounattend.xml फ़ाइल प्राप्त करें (इंटरनेट की आवश्यकता है)",
   "WIMUtil_Card_SelectXML_Description": "अपने द्वारा या विनहान्स, श्नीगन्स या अन्य समान सेवाओं जैसी सेवाओं द्वारा उत्पन्न एक autounattend.xml फ़ाइल जोड़ें",
@@ -1357,6 +1362,26 @@
   "Progress_Store_DownloadingMainPackage": "{0} मुख्य पैकेज डाउनलोड किया जा रहा है...",
   "Progress_Store_DownloadingDependencies": "{0} आवश्यक निर्भरता पैकेज डाउनलोड किए जा रहे हैं...",
   "Progress_Store_InstallingWithDependencies": "{0} को {1} निर्भरताओं के साथ स्थापित किया जा रहा है...",
+  "Progress_Store_Installing": "{0} इंस्टॉल किया जा रहा है...",
+  "Progress_Store_RequestingInfo": "{0} के लिए पैकेज जानकारी का अनुरोध किया जा रहा है...",
+  "Progress_Store_DownloadingMain": "{0} मुख्य पैकेज डाउनलोड किया जा रहा है...",
+  "Progress_Store_NonRecoverableError": "इंस्टॉलेशन विफल रहा: {0}",
+  "Progress_WinGet_CheckingUpdates": "WinGet अपडेट की जाँच की जा रही है...",
+  "Progress_WinGet_CheckingVersion": "WinGet संस्करण की जाँच की जा रही है...",
+  "Progress_WinGet_UpdateInitiated": "स्टोर के माध्यम से WinGet अपडेट शुरू किया गया, पूर्णता की पुष्टि की जा रही है...",
+  "Progress_WinGet_WaitingForUpdate": "WinGet अपडेट पूरा होने की प्रतीक्षा की जा रही है...",
+  "Progress_WinGet_Reinstalling": "WinGet को फिर से इंस्टॉल किया जा रहा है...",
+  "Progress_WinGet_UpdateSuccess": "WinGet सफलतापूर्वक अपडेट किया गया",
+  "Progress_WinGet_UpdateCompleted": "WinGet अपडेट पूरा हुआ",
+  "Progress_WinGet_AlreadyUpToDate": "WinGet पहले से ही अपडेट है",
+  "Progress_WinGet_InstalledLatest": "WinGet पहले से ही नवीनतम संस्करण में इंस्टॉल है",
+  "Progress_WinGet_Ready": "WinGet तैयार है",
+  "Progress_DeletingImageFile": "इमेज फाइल को हटाया जा रहा है...",
+  "Progress_ImageFileDeleted": "इमेज फाइल सफलतापूर्वक हटा दी गई",
+  "Progress_ImageFileDeletionFailed": "इमेज फाइल हटाने में विफल",
+  "Dialog_DeleteImg": "इमेज फाइल हटाएं",
+  "WIMUtil_Msg_DeleteImgConfirm": "क्या आप वाकई मौजूदा इमेज फाइल को हटाना चाहते हैं?",
+  "Setting_CrossGroupWarning_Header": "यह सेटिंग इसे भी नियंत्रित करती है:",
   "ServiceOption_DisabledRecommended": "अक्षम (अनुशंसित)",
   "ServiceOption_AutomaticRecommended": "स्वचालित (अनुशंसित)",
   "ServiceOption_Disabled": "अक्षम",
