--- a/src/Winhance.WPF/Localization/vi.json
+++ b/src/Winhance.WPF/Localization/vi.json
@@ -1049,6 +1049,10 @@
   "WIMUtil_Card_SelectOutput_Button": "Chọn vị trí",
   "WIMUtil_Card_ConvertImage_Title": "Chuyển đổi định dạng hình ảnh",
   "WIMUtil_Card_ConvertImage_Button": "Chuyển đổi",
+  "WIMUtil_Card_BothImages_Title": "Tìm thấy cả WIM và ESD",
+  "WIMUtil_Card_BothImages_Description": "Cả install.wim và install.esd đều tồn tại. Chỉ nên có một cái. Vui lòng xóa một cái để tiếp tục.",
+  "WIMUtil_Button_DeleteWim": "Xóa WIM",
+  "WIMUtil_Button_DeleteEsd": "Xóa ESD",
   "WIMUtil_Card_GenerateWinhanceXML_Description": "Tạo tệp autounattend.xml dựa trên các lựa chọn hiện tại của bạn trong Winhance",
   "WIMUtil_Card_DownloadXML_Description": "Tải tệp autounattend.xml được cấu hình sẵn UnattendedWinstall mới nhất (yêu cầu internet)",
   "WIMUtil_Card_SelectXML_Description": "Thêm tệp autounattend.xml do bạn tự tạo hoặc các dịch vụ như Winhance, Schneegans hoặc các dịch vụ tương tự khác",
@@ -1358,6 +1362,26 @@
   "Progress_Store_DownloadingMainPackage": "Đang tải xuống gói chính {0}...",
   "Progress_Store_DownloadingDependencies": "Đang tải xuống {0} gói phụ thuộc bắt buộc...",
   "Progress_Store_InstallingWithDependencies": "Đang cài đặt {0} với {1} phụ thuộc...",
+  "Progress_Store_Installing": "Đang cài đặt {0}...",
+  "Progress_Store_RequestingInfo": "Đang yêu cầu thông tin gói cho {0}...",
+  "Progress_Store_DownloadingMain": "Đang tải xuống gói chính {0}...",
+  "Progress_Store_NonRecoverableError": "Cài đặt thất bại: {0}",
+  "Progress_WinGet_CheckingUpdates": "Đang kiểm tra các bản cập nhật WinGet...",
+  "Progress_WinGet_CheckingVersion": "Đang kiểm tra phiên bản WinGet...",
+  "Progress_WinGet_UpdateInitiated": "Cập nhật WinGet đã được khởi tạo qua Store, đang xác minh hoàn tất...",
+  "Progress_WinGet_WaitingForUpdate": "Đang chờ cập nhật WinGet hoàn tất...",
+  "Progress_WinGet_Reinstalling": "Đang cài đặt lại WinGet...",
+  "Progress_WinGet_UpdateSuccess": "Đã cập nhật WinGet thành công",
+  "Progress_WinGet_UpdateCompleted": "Cập nhật WinGet đã hoàn tất",
+  "Progress_WinGet_AlreadyUpToDate": "WinGet đã được cập nhật",
+  "Progress_WinGet_InstalledLatest": "WinGet đã được cài đặt ở phiên bản mới nhất",
+  "Progress_WinGet_Ready": "WinGet đã sẵn sàng",
+  "Progress_DeletingImageFile": "Đang xóa tệp hình ảnh...",
+  "Progress_ImageFileDeleted": "Đã xóa tệp hình ảnh thành công",
+  "Progress_ImageFileDeletionFailed": "Xóa tệp hình ảnh thất bại",
+  "Dialog_DeleteImg": "Xóa Tệp Hình Ảnh",
+  "WIMUtil_Msg_DeleteImgConfirm": "Bạn có chắc chắn muốn xóa tệp hình ảnh hiện có không?",
+  "Setting_CrossGroupWarning_Header": "Cài đặt này cũng điều khiển:",
   "ServiceOption_DisabledRecommended": "Tắt (Được khuyến nghị)",
   "ServiceOption_AutomaticRecommended": "Tự động (Được khuyến nghị)",
   "ServiceOption_Disabled": "Tắt",
